@@ -4,6 +4,8 @@
 
 - New NXSL functions: Base64Decode, Base64Encode, EventCodeFromName, EventNameFromCode
 - Original event name passed to alarm timeout event as 5th parameter
+- Fixed issues:
+	- NX-1503 (Access denied error on attempt to take screenshot even if user has take screenshot access right)
 
 
 *
